--- a/DotNetAssessmentLuisCarlosNoguera/appsettings.json
+++ b/DotNetAssessmentLuisCarlosNoguera/appsettings.json
@@ -7,6 +7,6 @@
     }
   },
   "AllowedHosts": "*",
-  "AuthToken": "3339447559441453_123",
+  "AuthToken": "3339447559441453",
   "BaseApiUrl": "https://superheroapi.com/api/"
 }
