--- a/SuperHeroesAndVillainsApp.Web/SupperHeroesAndVillainsApp.Web.csproj
+++ b/SuperHeroesAndVillainsApp.Web/SupperHeroesAndVillainsApp.Web.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <UserSecretsId>ac364676-9494-4092-a9ba-022c1f2d4482</UserSecretsId>
   </PropertyGroup>
 
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
 </Project>
