Fixed api url and cleaned up HomeController

--- a/SuperHeroesAndVillainsApp.Web/appsettings.json
+++ b/SuperHeroesAndVillainsApp.Web/appsettings.json
@@ -8,5 +8,5 @@
   },
   "AllowedHosts": "*",
   "AuthToken": "3339447559441453",
-  "BaseApiUrl": "https://superheroapi.com/api/"
+  "BaseApiUrl": "https://www.superheroapi.com/api/"
 }
